--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,14 +1,23 @@
-requirements:
-  - sphinx
-  - sphinx_rtd_theme
+# .readthedocs.yaml
+version: 2
+
+build:
+  os: "ubuntu-22.04"
+  tools:
+    python: "3.8"
 
 python:
-  version: "3.8"
+  system_packages: true
   install:
     - method: pip
       path: .
-      extra_requirements:
-        - docs
+    - requirements: docs/requirements.txt
 
 sphinx:
+  builder: html
   configuration: docs/conf.py
+  fail_on_warning: false
+
+formats:
+  - pdf
+  - epub
