--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,6 @@
-sphinx>=4.0.0
-sphinx-rtd-theme>=1.0.0
-myst-parser>=0.18.0
-sphinx-intl>=2.0.1
+sphinx==7.0.1
+sphinx-rtd-theme==1.2.2
+myst-parser==2.0.0
+sphinx-autobuild==2021.3.14
+sphinx-intl==2.0.1
+docutils==0.20.1
