--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -2,21 +2,16 @@
 version: 2
 
 build:
-  os: "ubuntu-22.04"
+  os: ubuntu-22.04
   tools:
     python: "3.8"
 
 python:
-  system_packages: true
   install:
-    - method: pip
-      path: .
     - requirements: docs/requirements.txt
 
 sphinx:
-  builder: html
   configuration: docs/conf.py
-  fail_on_warning: false
 
 formats:
   - pdf
