--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,17 @@
-sphinx==7.2.6
-sphinx-rtd-theme==2.0.0
-sphinx-autodoc-typehints==1.25.3
-sphinxcontrib-napoleon
+sphinx==7.1.2
+sphinx-rtd-theme==1.3.0
+nbsphinx==0.9.2
+sphinx-autodoc-typehints==1.24.0
+sphinx-copybutton==0.5.2
+sphinx-tabs==3.4.1
+myst-parser==2.0.0
+# Documentation Build Dependencies
+docutils>=0.19.0
+jinja2>=3.0.0
+pygments>=2.15.0
+# Jupyter Integration
+ipykernel>=6.0.0
+ipython>=8.0.0
+jupyter-client>=8.0.0
+nbconvert>=7.0.0
+nbformat>=5.0.0
