--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -27,6 +27,5 @@ formats:
   - epub
 
 # Optionally declare the Python requirements required to build your docs
-python:
-  install:
-    - requirements: docs/requirements-docs.txt
+python:  install:
+    - requirements: docs/requirements.txt
