--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,17 +1,17 @@
-sphinx==7.1.2
-sphinx-rtd-theme==1.3.0
-nbsphinx==0.9.2
-sphinx-autodoc-typehints==1.24.0
-sphinx-copybutton==0.5.2
-sphinx-tabs==3.4.1
-myst-parser==2.0.0
-# Documentation Build Dependencies
-docutils>=0.19.0
+sphinx>=4.5.0,<5.0.0
+sphinx-rtd-theme>=1.0.0
+nbsphinx>=0.8.9
+docutils>=0.17.1
 jinja2>=3.0.0
-pygments>=2.15.0
-# Jupyter Integration
+pygments>=2.11.2
 ipykernel>=6.0.0
-ipython>=8.0.0
-jupyter-client>=8.0.0
-nbconvert>=7.0.0
+ipython>=7.0.0
+jupyter-client>=7.0.0
+nbconvert>=6.0.0
 nbformat>=5.0.0
+tensorflow>=2.8.0
+numpy>=1.19.5
+pandas>=1.3.0
+scikit-learn>=1.0.0
+matplotlib>=3.3.0
+sentence-transformers>=2.2.0
